--- a/EmployeePayroll-App/pages/EmployeePayroll_Home.html
+++ b/EmployeePayroll-App/pages/EmployeePayroll_Home.html
@@ -18,10 +18,19 @@
         <span class="emp-text emp-payroll">PAYROLL</span>
       </div>
         </form>
-      </div>    
+      </div>  
+    
+    
     </div>
   </header>
- 
+  <div class="form-content">
+    <form class="form" action="#" onsubmit="save(event);return false">
+      <!-- UC 2 -->
+      <div class="form-head"> Employee Payroll form </div>
+      <div class="row-content">
+          <label class="label text" for="name">Name</label>
+          <input class="input" type="text" id="name" name="name" 
+                  placeholder="Your name.." required>
+      </div>
 </body>
 </html>
-
