[Mihir] Add. Buttons and Notes added

--- a/EmployeePayroll-App/pages/EmployeePayroll_Home.html
+++ b/EmployeePayroll-App/pages/EmployeePayroll_Home.html
@@ -142,6 +142,17 @@
           </select>
         </div>
       </div>
+      <div class="row-content">
+        <label class="label text" for="notes">Notes</label>
+        <textarea class="input" id="notes" name="notes" placeholder=""></textarea>
+      </div>
+      <div class="button-parent">
+        <a href="./home.html" class="button">Cancel</a>
+        <div>
+          <button class="button submit-button" type="submit" id="sumitbutton">Submit</button>
+          <button class="button" type="reset" id="resetbutton">Reset</button>
+        </div>
+      </div>
     </form>
   </div>
 </body>
