[Mihir] Add. ability to show salary range

--- a/EmployeePayroll-App/pages/EmployeePayroll_Home.html
+++ b/EmployeePayroll-App/pages/EmployeePayroll_Home.html
@@ -80,7 +80,7 @@
       <div class="row-content">
         <label class="label text" for="salary">Choose your salary: </label>
         <input class="input" type="range" name="salary" id="salary" min="300000" max="500000" step="100" value="400000">
-        <output class="salary-output text" for="salary">400000</output>
+        <output class="salary-output" for="salary">400000</output>
       </div>
       <!-- UC 5 -->
       <div class="row-content">
@@ -149,12 +149,20 @@
       <div class="button-parent">
         <a href="./home.html" class="button">Cancel</a>
         <div>
-          <button class="button submit-button" type="submit" id="sumitbutton">Submit</button>
+          <button class="button submit-button" type="submit" id="submitbutton">Submit</button>
           <button class="button" type="reset" id="resetbutton">Reset</button>
         </div>
       </div>
     </form>
   </div>
+  <script>
+    const salary = document.querySelector('#salary');
+    const output = document.querySelector('.salary-output');
+    output.textContent = salary.value;
+    salary.addEventListener('input', function () {
+      output.textContent = salary.value;
+    })
+  </script>
 </body>
 
 </html>
