--- a/EmployeePayroll-App/pages/EmployeePayroll_Home.html
+++ b/EmployeePayroll-App/pages/EmployeePayroll_Home.html
@@ -7,7 +7,8 @@
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;600&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="../css/style.css">
   <title>Employee payroll form</title>
-  <script defer src="../js/new_payroll_form.js"></script>
+  <script defer src="../js/payroll_form.js"></script>
+  <script defer src="../js/Employee_Payroll.js"></script>
 </head>
 
 <body>
@@ -21,16 +22,16 @@
       </div>
     </div>
   </header>
+
   <div class="form-content">
-    <form class="form" action="#" onsubmit="save(event);return false">
+    <form class="form" action="#" onsubmit="save(event)">
       <!-- UC 2 -->
       <div class="form-head"> Employee Payroll form </div>
       <div class="row-content">
         <label class="label text" for="name">Name</label>
         <input class="input" type="text" id="name" name="name" placeholder="Your name.." required>
-        <error-output class="text-error" for="name"></error-output>
+        <error-output id="name-error" for="name"></error-output>
       </div>
-      <!-- UC 3 -->
       <div class="row-content">
         <label class="label text" for="profile">Profile image</label>
         <div class="profile-radio-content">
@@ -40,7 +41,7 @@
           </label>
           <label>
             <input type="radio" id="profile2" name="profile" value="../assets/profile-images/Ellipse 1.png" required>
-            <img class="profile" id='image2' src="../assets/profile-images/Ellipse 1.png">
+            <img class="profile" id='image2' src="../assets/profile-images/Ellipse -1.png">
           </label>
           <label>
             <input type="radio" id="profile3" name="profile" value="../assets/profile-images/Ellipse -8.png" required>
@@ -51,43 +52,43 @@
             <img class="profile" id='image4' src="../assets/profile-images/Ellipse -7.png">
           </label>
         </div>
-
-        <!-- UC 4 -->
-        <div class="row-content">
-          <label class="label text" for="gender">Gender</label>
-          <div>
-            <input type="radio" id="male" name="gender" value="male">
-            <label class="text" for="male">Male</label>
-            <input type="radio" id="female" name="gender" value="female">
-            <label class="text" for="female">Female</label>
-          </div>
+      </div>
+      <!-- UC 4 -->
+      <div class="row-content">
+        <label class="label text" for="gender">Gender</label>
+        <div>
+          <input type="radio" id="male" name="gender" value="Male" required>
+          <label class="text" for="male">Male</label>
+          <input type="radio" id="female" name="gender" value="Female" required>
+          <label class="text" for="female">Female</label>
         </div>
       </div>
       <div class="row-content">
         <label class="label text" for="department">Department</label>
         <div>
-          <input class="checkbox" type="checkbox" id="hr" name="hr" value="HR">
+          <input class="checkbox" type="checkbox" id="hr" name="department" value="HR">
           <label class="text" for="hr">HR</label>
-          <input class="checkbox" type="checkbox" id="sales" name="sales" value="Sales">
+          <input class="checkbox" type="checkbox" id="sales" name="department" value="Sales">
           <label class="text" for="sales">Sales</label>
-          <input class="checkbox" type="checkbox" id="finance" name="finance" value="Finance">
+          <input class="checkbox" type="checkbox" id="finance" name="department" value="Finance">
           <label class="text" for="finance">Finance</label>
-          <input class="checkbox" type="checkbox" id="engineer" name="engineer" value="Engineer">
-          <label class="text" for="engineer">Engineer</label>
-          <input class="checkbox" type="checkbox" id="others" name="others" value="Others">
+          <input class="checkbox" type="checkbox" id="engineer" name="department" value="Engineer">
+          <label class="text" for="er">Engineer</label>
+          <input class="checkbox" type="checkbox" id="others" name="department" value="Others">
           <label class="text" for="others">Others</label>
         </div>
       </div>
       <div class="row-content">
-        <label class="label text" for="salary">Choose your salary: </label>
+        <label class="label text" for="salary">Salary</label>
         <input class="input" type="range" name="salary" id="salary" min="300000" max="500000" step="100" value="400000">
-        <output class="salary-output" for="salary">400000</output>
+        <output class="salary-output text" for="salary">400000</output>
       </div>
-      <!-- UC 5 -->
+      <!-- UC 5-->
       <div class="row-content">
         <label class="label text" for="startDate">Start Date</label>
         <div>
-          <select id="day" name="Day">
+          <select id="day" name="Day" required>
+            <option>Day</option>
             <option value="1">1</option>
             <option value="2">2</option>
             <option value="3">3</option>
@@ -121,52 +122,46 @@
             <option value="31">31</option>
           </select>
           <select id="month" name="Month">
-            <option value="Jan">January</option>
-            <option value="Feb">February</option>
-            <option value="March">March</option>
-            <option value="April">April</option>
-            <option value="May">May</option>
-            <option value="June">June</option>
-            <option value="July">July</option>
-            <option value="Aug">August</option>
-            <option value="Sep">September</option>
-            <option value="Oct">October</option>
-            <option value="Nov">November</option>
-            <option value="Dec">December</option>
+            <option>Month</option>
+            <option value=1>January</option>
+            <option value=2>February</option>
+            <option value=3>March</option>
+            <option value=4>April</option>
+            <option value=5>May</option>
+            <option value=6>June</option>
+            <option value=7>July</option>
+            <option value=8>August</option>
+            <option value=9>September</option>
+            <option value=10>October</option>
+            <option value=11>November</option>
+            <option value=12>December</option>
           </select>
           <select id="year" name="Year">
-            <option value="2016">2016</option>
-            <option value="2017">2017</option>
-            <option value="2018">2018</option>
-            <option value="2019">2019</option>
+            <option>Year</option>
             <option value="2020">2020</option>
+            <option value="2019">2019</option>
+            <option value="2018">2018</option>
+            <option value="2017">2017</option>
+            <option value="2016">2016</option>
+            <option value="2015">2015</option>
+            <option value="2014">2014</option>
           </select>
         </div>
       </div>
+      <!-- UC 6-->
       <div class="row-content">
         <label class="label text" for="notes">Notes</label>
-        <textarea class="input" id="notes" name="notes" placeholder=""></textarea>
+        <textarea id="notes" class="input" name="Notes" placeholder="" style="height: 100px;"></textarea>
       </div>
-      <div class="button-parent">
-        <a href="./home.html" class="button">Cancel</a>
-        <div>
-          <button class="button submit-button" type="submit" id="submitbutton">Submit</button>
-          <button class="button" type="reset" id="resetbutton">Reset</button>
+      <div class="buttonParent">
+        <a href="./home.html" class="resetButton button cancelButton">Cancel</a>
+        <div class="submit-reset">
+          <button type="submit" class="submitButton button" id="submitButton">Submit</button>
+          <button type="reset" class="resetButton button">Reset</button>
         </div>
       </div>
     </form>
   </div>
-  <!--UC 8 -->
-  <script>
-    const salary = document.querySelector('#salary');
-    const output = document.querySelector('.salary-output');
-    output.textContent = salary.value;
-    salary.addEventListener('input', function () {
-      output.textContent = salary.value;
-    })
-  </script>
-  <!--UC 9 -->
-  <script type="text/javascript" src="../js/Employee_Payroll.js"></script>
 </body>
 
 </html>
