--- a/EmployeePayroll-App/pages/EmployeePayroll_Home.html
+++ b/EmployeePayroll-App/pages/EmployeePayroll_Home.html
@@ -151,7 +151,7 @@
       <!-- UC 6-->
       <div class="row-content">
         <label class="label text" for="notes">Notes</label>
-        <textarea id="notes" class="input" name="Notes" placeholder="" style="height: 100px;"></textarea>
+        <textarea id="notes" class="input" name="notes" placeholder="" style="height: 100px;"></textarea>
       </div>
       <div class="buttonParent">
         <a href="./home.html" class="resetButton button cancelButton">Cancel</a>
