[Mihir] Refactor. Page UI refactored

--- a/EmployeePayroll-App/pages/EmployeePayroll_Home.html
+++ b/EmployeePayroll-App/pages/EmployeePayroll_Home.html
@@ -156,7 +156,7 @@
       <div class="buttonParent">
         <a href="./home.html" class="resetButton button cancelButton">Cancel</a>
         <div class="submit-reset">
-          <button type="submit" class="submitButton button" id="submitButton">Submit</button>
+          <button type="submit" class="button submitButton" id="submitButton">Submit</button>
           <button type="reset" class="resetButton button">Reset</button>
         </div>
       </div>
