--- a/EmployeePayroll-App/pages/Homepage.html
+++ b/EmployeePayroll-App/pages/Homepage.html
@@ -31,6 +31,35 @@
             <a href="../pages/Form_Employee_Payroll.html" class="add-button">
                 <img src="../assets/icons/add-24px.svg" alt="">Add User</a>
         </div>
+        <!--UC 3 view in tabular format-->
+        <div class="table-main">
+            <table id="display" class="table">
+                <tr>
+                    <th></th>
+                    <th>Name</th>
+                    <th>Gender</th>
+                    <th>Department</th>
+                    <th>Salary</th>
+                    <th>Start Date</th>
+                    <th>Actions</th>
+                </tr>
+                <tr>
+                    <td><img class="profile" alt="" src="../assets//profile-images/Ellipse -2.png"></td>
+                    <td>Vishal Agarwal</td>
+                    <td>Male</td>
+                    <td>
+                        <div class="dept-label">HR</div>
+                        <div class="dept-label">Finance</div>
+                    </td>
+                    <td>300000</td>
+                    <td>1 Nov 2020</td>
+                    <td>
+                        <img id="1" onclick="remove(this)" alt="delete" src="../assets/icons/delete-black-18dp.svg">
+                        <img id="1" onclick="update(this)" alt="edit" src="../assets/icons/create-black-18dp.svg">
+                    </td>
+                </tr>
+            </table>
+        </div>
     </div>
 </body>
 
