--- a/EmployeePayroll-App/pages/EmployeePayroll_Home.html
+++ b/EmployeePayroll-App/pages/EmployeePayroll_Home.html
@@ -154,7 +154,7 @@
         <textarea id="notes" class="input" name="notes" placeholder="" style="height: 100px;"></textarea>
       </div>
       <div class="buttonParent">
-        <a href="./home.html" class="resetButton button cancelButton">Cancel</a>
+        <a href="./Homepage.html" class="resetButton button cancelButton">Cancel</a>
         <div class="submit-reset">
           <button type="submit" class="button submitButton" id="submitButton">Submit</button>
           <button type="reset" class="resetButton button">Reset</button>
