[Mihir] Add. Ability to view details from local storage

--- a/EmployeePayroll-App/pages/Homepage.html
+++ b/EmployeePayroll-App/pages/Homepage.html
@@ -37,7 +37,9 @@
           <!-- UC 4 View from js file-->
         </div>
         <script src="../js/home.js"></script>
-        <script src="../js/Employee_Payroll.js"></script>
+        <script src="../js/utility.js"></script>
+        <script src="../js/site_properties.js"></script>
+        <script src="../js/EmployeePayroll.js"></script>
 </body>
 
 </html>
